# GreatAsset

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yaml  coverage_and_lint.yaml
docs/: conf.py  index.rst  save.rst
examples/: opening_a_save_file.py  spawning_items.py  use_context_manager.py
great_asset/: __init__.py  crypt.py  enums.py  item.py  save_file.py  utils.py  vector.py
great_asset/types_/: __init__.py  challenge_file.py  config_file.py  save_file.py  shared.py
tests/: test_save_file.py
tests/save_files/: LCChallengeFile1  LCChallengeFile2  LCSaveFile1  LCSaveFile2
